# agent-demo

./: .gitignore  history_mcp_server.py  knowledge_mcp_server.py  pyproject.toml  server.py
knowledge/local/character/: 派蒙.txt  角色关系.txt
knowledge/local/npc/: 阿佩普.txt
knowledge/local/skill/: 班尼特.md
knowledge/local/world/: 元素反应.txt
